results/SVCOMP/0-shot/log-ArithmeticException6-2024_03_18_22_36_30.txt
/**
 * The ArithmeticException6 class provides a method to handle arithmetic exceptions.
 */
public class ArithmeticException6 {

  /**
   * This method checks if an arithmetic exception occurs when dividing 10 by the given denominator.
   * 
   * @param denom the denominator to divide 10 by
   * @return true if no arithmetic exception occurs, false if an arithmetic exception occurs
   */
  //@ requires denom != 0;
  //@ ensures \result == true || \result == false;
  //@ signals (ArithmeticException) \result == false;
  public static boolean arithmeticException6(int denom) {
    try {
      int j = 10 / denom;
    } catch (ArithmeticException exc) {
      return false;
    }
    return true;
  }

}
/home/max/Documents/JMLGPT/tmp/ArithmeticException6.java:14: error: A \result expression may not be in a signals clause
  //@ signals (ArithmeticException) \result == false;
                                     ^
1 error

